# stocks-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pyproject.yaml  requirements.  requirements.dev.txt  requirements.txt  setup.py
scripts/: setup_dev.py
src/: __init__.py  config.py  main.py  py.typed
src/ui/: __init__.py
src/ui/components/: __init__.py  charts.py  frames.py
src/utils/: __ijnit__.py  db_manager.py  logger.py  stock_data.py
tests/: __init__.py  conftest.py  test_charts.py  test_frames.py
